# greentic-pack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.codex/: PR-01-interfaces.md  PR-01-public-wit.md  PR-01.md  PR-02.md  PR-03.md  PR-04.md  PR-05.md  PR-06.md  PR-PACK-01-wizard.md  PR-PACK-01.md  PR-PACK-02.md  PR-PACK-03.md  PR-PACK-04.md  PR-PACK-05.md  PackValPR-04.md  repo_overview.md
.codex/done/: PR-00-VISION.md  PR-01-DEPRECATION-SIGNALS.md  PR-01-pack-as-qa-runner.md  PR-01-public-wit.md  PR-02-DOCS-SWEEP.md  PR-02-docs.md  PR-02.md  PR-04.md  PackValPR-04.md
.github/workflows/: auto-tag.yml  ci.yml  codex-security-fix-test.yml  dev-publish.yml  publish.yml
ci/: check_no_duplicate_canonical_wit.sh  check_no_interfaces_bindings_imports.sh  local_check.sh
crates/greentic-pack/: Cargo.toml
crates/greentic-pack/examples/: build_demo.rs
crates/greentic-pack/src/: builder.rs  kind.rs  lib.rs  pack_lock.rs  plan.rs  reader.rs  resolver.rs
crates/greentic-pack/src/validate/: mod.rs
crates/greentic-pack/tests/: component_manifest_index.rs  pack_lock.rs  packc_compat.rs  plan_cli.rs  providers_cli.rs
crates/pack_component/: Cargo.toml
crates/pack_component/src/: lib.rs
crates/pack_component_template/: Cargo.toml
crates/packc/: Cargo.toml
crates/packc/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
crates/packc/i18n/pack_wizard/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  es.json  et.json  fa.json  fi.json  fr-FR.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+27 more)
crates/packc/schemas/: pack.v1.schema.json  pack.v1.schema.yaml
crates/packc/src/: build.rs  cli_i18n.rs  component_host_stubs.rs  config.rs  extensions.rs  flow_resolve.rs  lib.rs  manifest.rs  mcp.rs  new.rs  pack_lock_doctor.rs  runtime.rs  telemetry.rs  validator.rs
crates/packc/src/cli/: add_extension.rs  components.rs  config.rs  input.rs  inspect.rs  inspect_lock.rs  lint.rs  mod.rs  plan.rs  providers.rs  qa.rs  resolve.rs  sign.rs  update.rs  verify.rs  wizard.rs  wizard_catalog.rs  wizard_i18n.rs  wizard_ui.rs
crates/packc/src/cli/gui/: loveable_convert.rs  mod.rs
crates/packc/src/mcp/: adapter_ref.rs
crates/packc/tests/: add_extension_smoke.rs  build_and_lint.rs  build_component_manifests.rs  build_pipeline.rs  cli.rs  cli_options.rs  cli_smoke.rs  component_exec_operation.rs  component_exec_operation_fixture.rs  component_manifest_files.rs  component_pack_e2e.rs  components_extension.rs  config_explain.rs  doctor_component_sources.rs  doctor_validation.rs  fixture_e2e.rs  flow_resolve_sidecar.rs  gui_loveable_convert.rs  inspect.rs  mcp_composition.rs  multi_pack_shared_component.rs  new_and_lint.rs  pack_lock_doctor.rs  plan_cli.rs  providers_cli.rs  readme_examples.rs  resolve.rs  routing_shorthand.rs  run_examples_manifest.rs  sidecar_enforcement.rs  sign_verify.rs  wizard.rs  wizard_cli_smoke.rs  wizard_guardrails.rs
crates/packc/tests/fixtures/: component_manifest_with_dev_flows.json
crates/packc/tests/fixtures/components/noop-component-v06-src/: Cargo.toml  describe.cbor
crates/packc/tests/fixtures/components/noop-component-v06-src/src/: lib.rs
crates/packc/tests/fixtures/packs/hello2-pack/flows/: main.ygtc.resolve.summary.json
crates/packc/tests/fixtures/packs/missing-provider-schema/: pack.yaml
crates/packc/tests/fixtures/packs/missing-provider-schema/flows/: main.ygtc  main.ygtc.resolve.summary.json
crates/packc/tests/fixtures/packs/sbom-dangling/: manifest.json  sbom.json
crates/packc/tests/fixtures/packs/valid-minimal/: pack.lock.cbor  pack.yaml
crates/packc/tests/fixtures/packs/valid-minimal/flows/: main.ygtc.resolve.json
crates/packc/tests/fixtures/registry/: index.json
crates/packc/tests/fixtures/wizard/: extensions.json
docs/: README.md  cli.md  events-provider-packs.md  extension-provider-packs-howto.md  internationalise-pack-howto.md  pack-format.md  pack_extensions_components.md  provider_extension.md  usage.md
docs/vision/: README.md  legacy.md
examples/billing-demo/: pack.lock.cbor  pack.lock.json  pack.yaml
examples/billing-demo/components/: templating.handlebars.wasm.describe.cbor
examples/billing-demo/flows/: main.ygtc  main.ygtc.resolve.json
examples/qa-demo/: pack.lock.cbor  pack.lock.json  pack.yaml
examples/qa-demo/flows/: qa_answer_flow.ygtc.resolve.json  qa_answer_flow.ygtc.resolve.summary.json  qa_orchestrator.ygtc.resolve.json  qa_orchestrator.ygtc.resolve.summary.json
examples/reco-demo/: pack.lock.cbor  pack.lock.json  pack.yaml
examples/reco-demo/flows/: main.ygtc
examples/search-demo/: pack.lock.cbor  pack.lock.json  pack.yaml
examples/search-demo/flows/: main.ygtc
examples/weather-demo/: pack.lock.cbor  pack.lock.json  pack.yaml
examples/weather-demo/.packc/pack_component/src/: data.rs  lib.rs
examples/weather-demo/components/mcp.exec/: component.manifest.json  component.wasm.describe.cbor
examples/weather-demo/components/qa.process/: component.manifest.json  component.wasm.describe.cbor
examples/weather-demo/components/templating.handlebars/: component.manifest.json
examples/weather-demo/components/weather_api/: component.manifest.json
examples/weather-demo/flows/: weather_bot.ygtc.resolve.json  weather_bot.ygtc.resolve.summary.json
tools/: i18n.sh
