[workspace]
members = [
    "crates/greentic-pack",
    "crates/packc",
    "crates/pack_component",
    "crates/pack_component_template",
]
exclude = [
    "examples/weather-demo/.packc/pack_component",
    "examples/qa-demo/.packc/pack_component",
    "crates/packc/tests/router_echo",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.4.42"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
semver = { version = "1", features = ["serde"] }
blake3 = "1"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
walkdir = "2"
thiserror = "2"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
base64 = "0.22"
ignore = "0.4"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
pkcs8 = { version = "0.10", features = ["pem"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
greentic-types = "0.4"
greentic-flow = "0.4"
greentic-interfaces-host = "0.4"
greentic-telemetry = { version = "0.4", features = ["otlp"] }
greentic-config-types = "0.4"
greentic-config = "0.4"
greentic-pack = { path = "crates/greentic-pack", version="0.4" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
pack_component_template = { version = "0.4", path = "crates/pack_component_template" }
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }
tempfile = "3"
rand_core_06 = { package = "rand_core", version = "0.6", features = ["std"] }
rustls-pki-types = "1"
x509-parser = "0.18"
regex = "1"
wit-component = "0.244"
greentic-distributor-client = { version = "0.4.12", default-features = false, features = ["reqwest", "dist-client"] }
schemars = "1"
