[package]
name = "greentic-pack"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.dev>"]
description = "Greentic pack builder and reader"
repository = "https://github.com/greentic-ai/greentic-pack"
documentation = "https://docs.greentic.ai/"
homepage = "https://github.com/greentic-ai/greentic-pack"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
greentic-flow = { workspace = true }
greentic-types = { workspace = true }
rcgen = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
zip = { workspace = true }
pkcs8 = { workspace = true }
rand_core_06 = { workspace = true }
rustls-pki-types = { workspace = true }
x509-parser = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
schemars = { workspace = true }
serde_yaml_bw = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
zip = { workspace = true }
serde_json = { workspace = true }
