[package]
name = "pack_component"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.dev>"]
repository = "https://github.com/greentic/greentic-pack"
description = "Greentic pack component implementation"
readme = "README.md"
keywords = ["greentic", "component", "wasm", "pack"]
categories = ["wasm", "api-bindings"]
documentation = "https://docs.greentic.ai/"
homepage = "https://github.com/greenticai/greentic-pack"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
greentic-interfaces-host = { workspace = true }

