[package]
name = "packc"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.dev>"]
repository = "https://github.com/greentic/greentic-pack"
description = "Greentic pack builder CLI"
readme = "README.md"
keywords = ["greentic", "cli", "pack", "wasm"]
categories = ["development-tools"]
documentation = "https://docs.greentic.ai/"
homepage = "https://github.com/greentic-ai/greentic-pack"

[features]
default = []
pem = []
openssl = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
greentic-flow = { workspace = true }
greentic-types = { workspace = true }
greentic-telemetry = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true }
serde_yaml_bw = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
pack_component_template = { version = "0.4", path = "../pack_component_template" }
rand_core_06 = { workspace = true }
greentic-pack = { version = "0.4", path = "../greentic-pack" }
semver = { workspace = true }
schemars = { workspace = true }
zip = { workspace = true }

[[bin]]
name = "packc"
path = "bin/packc.rs"

[dev-dependencies]
assert_cmd = "2"
indoc = "2"
tempfile = "3"
