[package]
name = "packc"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.ai"]
repository = "https://github.com/greentic-ai/greentic-pack"
description = "Greentic pack builder CLI"
readme = "README.md"
keywords = ["greentic", "cli", "pack", "wasm"]
categories = ["development-tools"]
documentation = "https://docs.greentic.ai/"
homepage = "https://github.com/greentic-ai/greentic-pack"

[features]
default = []
pem = []
openssl = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
greentic-flow = { workspace = true }
greentic-types = { workspace = true }
greentic-telemetry = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true }
serde_yaml_bw = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rand_core_06 = { workspace = true }
greentic-pack = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
wit-component = { workspace = true }
greentic-distributor-client = { workspace = true, default-features = false, features = ["reqwest", "dist-client"] }
pack_component_template = { workspace = true }

[[bin]]
name = "packc"
path = "bin/packc.rs"

[[bin]]
name = "greentic-pack"
path = "bin/greentic_pack.rs"

[dev-dependencies]
assert_cmd = "2"
indoc = "2"
tempfile = "3"
blake3 = { workspace = true }
wasmtime = "40"
wasmtime-wasi = "40"
