[package]
name = "greentic-pack"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.ai"]
repository = "https://github.com/greentic-ai/greentic-pack"
description = "Greentic pack builder CLI"
readme = "README.md"
keywords = ["greentic", "cli", "pack", "wasm"]
categories = ["development-tools"]
documentation = "https://docs.greentic.ai/"
homepage = "https://github.com/greentic-ai/greentic-pack"
include = [
    "Cargo.toml",
    "README.md",
    "bin/**",
    "src/**",
    "assets/*.wasm",
    "i18n/**/*.json",
]

[features]
default = []
pem = []
openssl = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
greentic-flow = { workspace = true }
greentic-types = { workspace = true }
greentic-interfaces-host = { workspace = true }
greentic-interfaces-wasmtime = { workspace = true }
greentic-telemetry = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
pkcs8 = { workspace = true }
serde = { workspace = true }
serde_yaml_bw = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
getrandom = { workspace = true }
greentic-pack = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
greentic-qa-lib = { workspace = true }
greentic-i18n-lib = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
wit-component = { workspace = true }
greentic-distributor-client = { workspace = true, default-features = false, features = ["reqwest", "dist-client"] }
pack_component_template = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
indexmap = { workspace = true }
ciborium = { workspace = true }
sys-locale = { workspace = true }
unic-langid = { workspace = true }

[lib]
name = "packc"
path = "src/lib.rs"

[[bin]]
name = "greentic-pack"
path = "bin/greentic_pack.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
indoc = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
